--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/Water/Scripts/Buoyancy.cs" />
+    <Compile Include="Assets/model-assets/demons/Demon Lord/Script/ScrollingUVs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/StylizedSurface/LibraryUrp/LitForwardPass_DR.hlsl" />
@@ -73,6 +74,7 @@
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/GradientSkybox/GradientSkybox.shader" />
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/StylizedSurface/LibraryUrp/Lighting_DR.hlsl" />
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/StylizedSurface/StylizedSurfaceOutline.shader" />
+    <None Include="Assets/model-assets/demons/Golem/Shader/SelfIllumBumpedSpecular.shader" />
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/StylizedSurface/TerrainLitAdd_DR.shader" />
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/StylizedSurface/StylizedSurface.shader" />
     <None Include="Assets/__PlayGround/shaders/FlatKit/Shaders/LightPlane.shader" />
