--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <None Include="Assets\__PlayGround\shaders\FlatKit\Shaders\StylizedSurface\StylizedSurfaceOutline.shader" />
     <None Include="Assets\__PlayGround\scenes\main-scene\bf-grass\Shaders\Debug\BFGrassMobileDebugURP.shader" />
     <None Include="Assets\__PlayGround\scenes\main-scene\bf-grass\Shaders\BFGrassURP.shader" />
+    <None Include="Assets\__PlayGround\scenes\main-scene\sky-box\skybox-gradient.shader" />
     <None Include="Assets\__PlayGround\shaders\FlatKit\Shaders\StylizedSurface\TerrainLitAdd_DR.shader" />
     <None Include="Assets\__PlayGround\shaders\FlatKit\Shaders\StylizedSurface\StylizedSurface.shader" />
     <None Include="Assets\__PlayGround\shaders\FlatKit\Shaders\LightPlane.shader" />
