--- a/.gitattributes
+++ b/.gitattributes
@@ -34,3 +34,15 @@ Assets/__PlayGround/scenes/main-scene/terrains/a_Textures/Ground005_H.png filter
 Assets/__PlayGround/scenes/main-scene/terrains/a_Textures/GroundPatchCracked01.tif filter=lfs diff=lfs merge=lfs -text
 Assets/__PlayGround/scenes/main-scene/terrains/a_Textures/GroundPatchCracked01_S.png filter=lfs diff=lfs merge=lfs -text
 Assets/__PlayGround/scenes/main-scene/terrains/a_Textures/Ground004_N.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_N.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001_H.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001_S.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001_mask.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_H.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_mask.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001_AO.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001_N.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_AO.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_S.png filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001.tif filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01.tif filter=lfs diff=lfs merge=lfs -text
