--- a/.gitattributes
+++ b/.gitattributes
@@ -46,3 +46,4 @@ Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCra
 Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01_S.png filter=lfs diff=lfs merge=lfs -text
 Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/Ground001.tif filter=lfs diff=lfs merge=lfs -text
 Assets/__PlayGround/scenes/main-scene/terrains/grounds/a_Textures/GroundPatchCracked01.tif filter=lfs diff=lfs merge=lfs -text
+Assets/__PlayGround/scenes/main-scene/skybox/star-night/star-night.exr filter=lfs diff=lfs merge=lfs -text
