--- a/ExternAttributes.Editor.csproj
+++ b/ExternAttributes.Editor.csproj
@@ -68,20 +68,20 @@
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers_SpecialCase/SpecialCasePropertyDrawerBase.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/MinValuePropertyValidator.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/ShowAssetPreviewPropertyDrawer.cs" />
-    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/PropertyUtility.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/ExpandablePropertyDrawer.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/MaxValuePropertyValidator.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/PropertyDrawerBase.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/SavedBool.cs" />
-    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/CustomInspectorDefinitions.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/DecoratorDrawers/InfoBoxDecoratorDrawer.cs" />
-    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/PropertyValidatorBase.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/ValidateInputPropertyValidator.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/RequiredPropertyValidator.cs" />
-    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/ExternalCustomEditorGUI.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/DecoratorDrawers/HorizontalLineDecoratorDrawer.cs" />
-    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/ReflectionUtility.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/ReadOnlyPropertyDrawer.cs" />
+    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/PropertyUtility.cs" />
+    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/CustomInspectorDefinitions.cs" />
+    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyValidators/PropertyValidatorBase.cs" />
+    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/ExternalCustomEditorGUI.cs" />
+    <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/Utility/ReflectionUtility.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/AllowNestingPropertyDrawer.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/PropertyDrawers/MinMaxSliderPropertyDrawer.cs" />
     <Compile Include="Assets/__PlayGround/shaders/FlatKit/[Render Pipeline] URP/EditorAttributes/Editor/ExternalCustomInspector.cs" />
@@ -442,6 +442,10 @@
       <HintPath>/Users/chfang/unity3d/editors/2022.3.18f1/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.VisualScripting.YamlDotNet">
+      <HintPath>Library/PackageCache/com.unity.visualscripting@1.9.1/Editor/VisualScripting.Core/Dependencies/YamlDotNet/Unity.VisualScripting.YamlDotNet.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="unityplastic">
       <HintPath>Library/PackageCache/com.unity.collab-proxy@2.3.1/Lib/Editor/PlasticSCM/unityplastic.dll</HintPath>
       <Private>False</Private>
@@ -458,8 +462,20 @@
       <HintPath>Library/PackageCache/com.unity.collab-proxy@2.3.1/Lib/Editor/PlasticSCM/log4netPlastic.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.VisualScripting.IonicZip">
+      <HintPath>Library/PackageCache/com.unity.visualscripting@1.9.1/Editor/VisualScripting.Core/Dependencies/DotNetZip/Unity.VisualScripting.IonicZip.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
+      <HintPath>Library/PackageCache/com.unity.visualscripting@1.9.1/Runtime/VisualScripting.Flow/Dependencies/NCalc/Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library/PackageCache/com.unity.nuget.newtonsoft-json@3.2.1/Runtime/Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.TextureAssets">
+      <HintPath>Library/PackageCache/com.unity.visualscripting@1.9.1/Editor/VisualScripting.Core/EditorAssetResources/Unity.VisualScripting.TextureAssets.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="nunit.framework">
